name:                concat-examples
version:             0.1.0.0
cabal-version:       >=1.18
synopsis:            Experiments with constrained categories
description:         Experiments with constrained categories
Category:            categories
license:             BSD3
license-file:        LICENSE
author:              Conal Elliott
maintainer:          conal@conal.net
Copyright:           (c) 2016-2017 by Conal Elliott
build-type:          Simple
extra-source-files:  ChangeLog.md

source-repository head
  type:             git
  location:         git://github.com/conal/concat-examples

executable test
  default-language:    Haskell2010
  hs-source-dirs:      src
  include-dirs:        src
  build-depends:       base >=4.9 && <4.10
                     , concat
                     , mtl, containers, ghc-prim
  main-is: Main.hs
  other-modules: Gather
  ghc-options:      -O2
